Include player id in status
